@@ -2,6 +2,6 @@ DEFS = -DLOCALEDIR=\"$(datadir)/locale\" @DEFS@
 INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/lib -I$(top_srcdir)/intl
 MAINTAINERCLEANFILES = Makefile.in
 
-EXTRA_DIST = nic-fake.py
+EXTRA_DIST = nic-fake.py test1.sh test2.sh test3.sh
 
 TESTS = $(srcdir)/test1.sh $(srcdir)/test2.sh $(srcdir)/test3.sh
